# voice2text

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json  settings.local.json
app/: config.py  main.py
app/routes/: api.py  pages.py  sse.py
app/services/: audio.py  formatter.py  refine.py  settings.py  tasks.py  transcribe.py
app/services/providers/: elevenlabs_stt.py  google_stt.py  openai_stt.py
app/static/js/: app.js
app/templates/: base.html  editor.html  index.html  settings.html
